# haskell-instrumentation-experiment

./: instrumentedopaleye.cabal
src/: Instrumented.hs  InstrumentedCore.hs  InstrumentedLucid.hs  InstrumentedOpaleye.hs  Lucid.hs  LucidOriginal.hs  Opaleye.hs  OpaleyeOriginal.hs
src/InstrumentedOpaleye/Internal/: Column.hs  PGTypes.hs  RunQuery.hs
src/InstrumentedOpaleye/Internal/HaskellDB/: PrimQuery.hs
src/Lucid/: Base.hs
src/Opaleye/Internal/: Column.hs  PGTypes.hs  RunQuery.hs
src/Opaleye/Internal/HaskellDB/: PrimQuery.hs
src/Web/: Scotty.hs
src/Web/Scotty/: Trans.hs  TransOriginal.hs
